syntax = "proto3";

package postProposal;

message PostProposalRequest {
    bytes proposal = 1;
    shared.Headers headers = 2;
}

message PostProposalResponse {
	shared.Headers headers = 1;
}
